[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Assets/Trap/Ground-trap.png" type="Texture" id=1]
[ext_resource path="res://src/Assets/Trap/Needle-trap.png" type="Texture" id=2]
[ext_resource path="res://src/Game/Trap/NeedleTrap.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "idle_trap"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AreaHitTrap/Ground:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaHitTrap/Needle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaHitTrap2/Ground:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaHitTrap2/Needle:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaHitTrap3/Ground:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AreaHitTrap3/Needle:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AreaHitTrap4/Ground:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AreaHitTrap4/Needle:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AreaHitTrap5/Ground:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AreaHitTrap5/Needle:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AreaHitTrap2/CollisionPolygon2D:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("AreaHitTrap3/CollisionPolygon2D:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("AreaHitTrap4/CollisionPolygon2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("AreaHitTrap5/CollisionPolygon2D:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaHitTrap/Ground:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaHitTrap/Needle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaHitTrap/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaHitTrap2/Ground:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaHitTrap3/Ground:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AreaHitTrap4/Ground:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AreaHitTrap5/Ground:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AreaHitTrap2/Needle:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AreaHitTrap3/Needle:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AreaHitTrap4/Needle:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AreaHitTrap5/Needle:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("AreaHitTrap2/CollisionPolygon2D:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.01, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("AreaHitTrap3/CollisionPolygon2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.01, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("AreaHitTrap4/CollisionPolygon2D:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.01, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("AreaHitTrap5/CollisionPolygon2D:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0.01, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="NeedleTrap" type="Node2D"]
script = ExtResource( 3 )

[node name="AreaHitTrap" type="Area2D" parent="."]

[node name="Ground" type="Sprite" parent="AreaHitTrap"]
texture = ExtResource( 1 )

[node name="Needle" type="Sprite" parent="AreaHitTrap"]
texture = ExtResource( 2 )
offset = Vector2( 0, -9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaHitTrap"]
polygon = PoolVector2Array( -1.83992, -0.168381, -0.188145, -17.748, -0.188145, -17.748, 2.11255, -0.109388 )
disabled = true

[node name="AreaHitTrap2" type="Area2D" parent="."]
position = Vector2( 11.8559, -7.63937 )

[node name="Ground" type="Sprite" parent="AreaHitTrap2"]
texture = ExtResource( 1 )

[node name="Needle" type="Sprite" parent="AreaHitTrap2"]
texture = ExtResource( 2 )
offset = Vector2( 0, -9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaHitTrap2"]
polygon = PoolVector2Array( -1.83992, -0.168381, -0.188145, -17.748, -0.188145, -17.748, 2.11255, -0.109388 )
disabled = true

[node name="AreaHitTrap3" type="Area2D" parent="."]
position = Vector2( -11.6079, -7.63937 )

[node name="Ground" type="Sprite" parent="AreaHitTrap3"]
texture = ExtResource( 1 )

[node name="Needle" type="Sprite" parent="AreaHitTrap3"]
texture = ExtResource( 2 )
offset = Vector2( 0, -9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaHitTrap3"]
polygon = PoolVector2Array( -1.83992, -0.168381, -0.188145, -17.748, -0.188145, -17.748, 2.11255, -0.109388 )
disabled = true

[node name="AreaHitTrap4" type="Area2D" parent="."]
position = Vector2( -11.6079, 6.53095 )

[node name="Ground" type="Sprite" parent="AreaHitTrap4"]
texture = ExtResource( 1 )

[node name="Needle" type="Sprite" parent="AreaHitTrap4"]
texture = ExtResource( 2 )
offset = Vector2( 0, -9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaHitTrap4"]
polygon = PoolVector2Array( -1.83992, -0.168381, -0.188145, -17.748, -0.188145, -17.748, 2.11255, -0.109388 )
disabled = true

[node name="AreaHitTrap5" type="Area2D" parent="."]
position = Vector2( 12.1638, 6.53095 )

[node name="Ground" type="Sprite" parent="AreaHitTrap5"]
texture = ExtResource( 1 )

[node name="Needle" type="Sprite" parent="AreaHitTrap5"]
texture = ExtResource( 2 )
offset = Vector2( 0, -9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaHitTrap5"]
polygon = PoolVector2Array( -1.83992, -0.168381, -0.188145, -17.748, -0.188145, -17.748, 2.11255, -0.109388 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_trap = SubResource( 1 )
anims/play_trap = SubResource( 2 )

[connection signal="body_entered" from="AreaHitTrap" to="." method="_on_AreaHitTrap_body_entered"]
[connection signal="body_entered" from="AreaHitTrap2" to="." method="_on_AreaHitTrap2_body_entered"]
[connection signal="body_entered" from="AreaHitTrap3" to="." method="_on_AreaHitTrap3_body_entered"]
[connection signal="body_entered" from="AreaHitTrap4" to="." method="_on_AreaHitTrap4_body_entered"]
[connection signal="body_entered" from="AreaHitTrap5" to="." method="_on_AreaHitTrap5_body_entered"]
